[gd_scene load_steps=2 format=3 uid="uid://dudmc6cocun7d"]

[ext_resource type="Script" path="res://ui/PauseMenu/pause_menu.gd" id="1_m72yk"]

[node name="PauseMenu" type="Node2D"]
script = ExtResource("1_m72yk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 99

[node name="BlackoutColor" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.482353)

[node name="Buttons" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -245.0
offset_top = -158.5
offset_right = 245.0
offset_bottom = 158.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
text = "Settings"

[node name="BackToMainMenuButton" type="Button" parent="CanvasLayer/Buttons"]
layout_mode = 2
text = "Back to main menu"

[connection signal="pressed" from="CanvasLayer/Buttons/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/BackToMainMenuButton" to="." method="_on_back_to_main_menu_button_pressed"]
